--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,55 @@
-body{
+
+.container{
 	background-image: url('../img/background.png');
+  min-height: 90vh;
 }
+
 .menu{
 	background-image: url('../img/menu.png');
-    width: 51px;
-    height: 28px;
+    width: 68px;
+    height: 36px;
     background-repeat: no-repeat;
     float: right;
     margin-top: 45px;
     background-size: cover;
+}
+.menu-bar{
+  width: 296px;
+  position: absolute;
+  right: 0px;
+  background-color: #464646;
+  display: none;
+}
+.menu ul{
+    padding-bottom: 36px;
+    list-style: none;
+}
+.menu ul li{
+    color: #fff;
+    font-weight: 600;
+    font-size: 14px;
+    text-align: left;
+    margin-top: 20px;
+    letter-spacing: 2px;
+}
+.menu ul li a{
+  color: #fff;
+}
+.menu ul li a:hover{
+  color: #195e2f; 
+}
+.menu-bar div.top{
+  overflow: auto;
+}
+.menu-bar .logo{
+  float: left;
+  margin-top: 0px;
+  width: 67px;
+}
+.menu-bar .close{
+  margin-top: 18px;
+  float: right;
+  margin-right: 22px;
 }
 .logo{
 	text-align: center;
@@ -18,10 +59,9 @@ body{
 	max-width:154px;
 }
 footer{
-    position: absolute;
-    bottom: 0;
+
     background-image: url('../img/footer.png');
-    height: 130px;
+
     width: 100%;
 }
 /** Overlay **/
@@ -47,19 +87,22 @@ footer{
 .overlay-content p{
     font-size: 21px;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 500;
     color: #fff;
 }
 /** Cropit Box **/
 
 .cropit-container{
 	background: #195e2f;
-	padding:5px;
-	width: 411px;
-    height: 420px;
-    margin: auto;
+	padding: 9px;
+  width: 612px;
+  height: 612px;
+  margin: auto;
+  margin-top: 50px;
 }
-
+.black-bckgd{
+  background: #000;
+}
 .cropit-preview {
     background: #000; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(#636363, #000000); /* For Safari 5.1 to 6.0 */
@@ -101,15 +144,250 @@ footer{
 .no-js .box__button {
   display: block;
 }
-
-/** Footer **/
-footer p{
-      color: #195e2f;
-    font-size: 33px;
-    font-weight: 500;
+.buttons{
+    width: 616px;
+    margin: auto;
+    padding-left: 2px;
+    margin-bottom: 138px;
 }
-footer p.desc{
+/** Footer **/
+footer .wrapper{
+   
+}
+footer p{
+  color: #195e2f;
+  font-size: 33px;
+  font-weight: 700;
+}
+footer .desc{
+    display: inline-block;
+    width:661px;
+}
+footer .desc p{
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 300;
+  float: left;
+  padding-left: 43px;
+}
+footer .about{
+    display: inline-block;
+    border-right: #fff solid 2px;
+    padding-right: 43px;
+    vertical-align: top;
+    margin: 22px 0px;
+}
+footer .about p{
+  margin: 5px 0px;
+  font-size: 33px;
+}
+
+footer .nominate{
+  display: inline-block;
+    color: #fff;
+    margin-left: 43px;
+    vertical-align: top;
+    margin-top: 20px;
+}
+footer .nominate p{
+  color: #fff;
+    font-size: 15px;
+    border: #195E2E solid 2px;
+    padding: 6px 15px;
+    text-transform: uppercase;
+}
+footer a{
+  color: #fff;
+}
+footer .social {
+      
+    float: right;
+    width: 174px;
+}
+footer .social ul{
+  list-style: none;
+  overflow: auto;
+  margin-top: 43px;
+  padding-left: 0px;
+}
+footer .social li{
+  float: left;
+  margin-left: 30px;
+}
+footer .social li a img{
+  max-height: 20px;
+}
+
+#preview{
+    width: 592px;
+    height: 591px;
+    border: 4px solid #000;
+    background: #000; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#636363, #000000); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#636363, #000000); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#636363, #000000); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#636363, #000000); /* Standard syntax */
+    text-align:center;
+    font-size:24px;
+    margin: auto;
+    background-size: cover;
+}
+input#imageLoader{
+  display: none;
+}
+input.sml_emailinput{
+  background: url('../img/email_pattern2.png');
+  padding: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border: #195e2f solid 6px;
+  background-size: cover;
+}
+input.sml_emailinput::-webkit-input-placeholder {
+  color: #0f4621;
+}
+
+input.sml_emailinput:-moz-placeholder { /* Firefox 18- */
+      color: #0f4621; 
+}
+
+input.sml_emailinput::-moz-placeholder {  /* Firefox 19+ */
+      color: #0f4621; 
+}
+
+input.sml_emailinput:-ms-input-placeholder {  
+       color: #0f4621; 
+}
+input.sml_emailinput:focus, input.sml_submitbtn:focus {outline:none;border: #195e2f solid 6px;}
+input.sml_submitbtn{
+  background: #0f4621;
+  border: #195e2f solid 6px;
+  padding: 12px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+.sml_email, .sml_submit{
+  display: inline-block;
+}
+@media (max-width: 1280px) and (min-width:792px){
+/*  footer .about{
+    display: inline-block;
+    border-bottom: #fff solid 2px;
+    width: 100%;
+    border-right: none; 
+  }
+  footer .desc{
+    width: auto;
+  }
+  footer .desc p{
+    font-size: 16px;
+    padding-left: 0px;
+  }
+  footer .nominate{
+    margin-left: 0px;
+  }*/
+  footer ul{
+    padding-left: 0px;
+  }
+  footer .about{
+    padding-right: 30px;
+  }
+  footer .about p{
+    font-size: 2.8vw;
+  }
+  footer .desc{
+    width: 56%;
+  }
+  footer .desc p{
+    font-size: 1.4vw;
+    margin-top: 18px;
+    padding-left: 30px;
+  }
+  footer .nominate{
+    margin-left: 12px;
+  }
+  footer .nominate p{
+    font-size: 1.2vw;
+  }
+  footer .social{
+    width: 15%;
+    margin-top: 0px;
+  }
+  footer .social ul{
+    margin-top: 35px;
+  }
+  footer .social li{
+    margin-left: 18px;
+  }
+}
+@media (max-width:792px){
+  footer .desc{
+    width: auto;
+  }
+  footer .desc p{
+    padding-left: 0px;
+  }
+  footer .about{
+    border: none;
+  }
+  footer .nominate{
+    margin-left: 0px;
+  }
+}
+@media (max-width:768px){
+  .cropit-container{
+    width: 325px;
+    height: 325px;
+    padding: 6px;
+  }
+  #preview{
+    width: 313px;
+    height: 318px;
+  }
+  footer{
+    padding-bottom: 10px;
+    padding-top: 20px;
+  }
+
+  .menu-bar{
+    width: 100%;
+    min-height: 100vh;
+    margin-top: -46px;
+        margin-top: -46px;
+    position: fixed;
+    z-index: 1;
+  }
+  .menu-bar div.top{
+    margin-top: 30px;
+  }
+  .menu ul li{
+    margin-top: 25px;
+  }
+  .buttons{
+    width: 326px;
+    padding-left: 0px;
+  }
+  .buttons img{
+    width:32.7%;
+  }
+}
+@media (max-width:360px){
+  .overlay-content p{
+    width: 90%;
+  }
+  .overlay-content p.desc{
+    margin: auto;
+  }
+  input.sml_emailinput{
+    width:100%;
+  }
+  input.sml_submitbtn{
+    width:100%;
+  }
 }
