--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,34 @@ footer{
     font-weight: 500;
     color: #fff;
 }
+#social{
+  display: none;
+  
+}
+#social .overlay-content{
+  top:40%;
+}
+.close{
+  position: absolute;
+  right: 7%;
+    top: 18%;
+}
+  .bar1{
+    transform: rotate(-50deg) translate(-4px, 4px);
+      width: 50px;
+      height: 8px;
+      background-color: #fff;
+      margin: 7px 0;
+      transition: 0.4s;
+  }
+  .bar2{
+    transform: rotate(50deg) translate(-7px, -7px);
+      width: 50px;
+      height: 8px;
+      background-color:#fff;
+      margin: 7px 0;
+      transition: 0.4s;
+  }
 /** Cropit Box **/
 
 .cropit-container{
